--- a/cacti-master/cache.cfg
+++ b/cacti-master/cache.cfg
@@ -2,7 +2,7 @@
 //-size (bytes) 2048
 //-size (bytes) 4096
 //-size (bytes) 32768
--size (bytes) 131072
+-size (bytes) 131072 //TODO
 //-size (bytes) 262144
 //-size (bytes) 1048576
 //-size (bytes) 2097152
@@ -24,15 +24,15 @@
 
 # Line size
 //-block size (bytes) 8
--block size (bytes) 64
+-block size (bytes) 64 //TODO "data array entry size"
 
 # To model Fully Associative cache, set associativity to zero
 //-associativity 0
--associativity 2
+-associativity 2 //TODO
 //-associativity 4
 //-associativity 8
 
--read-write port 1
+-read-write port 1 //TODO?
 -exclusive read port 0
 -exclusive write port 0
 -single ended read ports 0
@@ -42,7 +42,7 @@
 //-technology (u) 0.022
 //-technology (u) 0.040
 //-technology (u) 0.032
--technology (u) 0.090
+-technology (u) 0.045
 
 # following three parameters are meaningful only for main memories
 
@@ -72,7 +72,7 @@
 
 # Bus width include data bits and address bits required by the decoder
 //-output/input bus width 16
--output/input bus width 512
+-output/input bus width 512 //TODO: change to cache line size * 8
 
 // 300-400 in steps of 10
 -operating temperature (K) 360
@@ -86,7 +86,7 @@
 # to model special structure like branch target buffers, directory, etc. 
 # change the tag size parameter
 # if you want cacti to calculate the tagbits, set the tag size to "default"
--tag size (b) "default"
+-tag size (b) "default" //TODO
 //-tag size (b) 22
 
 # fast - data and tag access happen in parallel
@@ -162,8 +162,8 @@
 
 -Add ECC - "true"
 
-//-Print level (DETAILED, CONCISE) - "CONCISE"
--Print level (DETAILED, CONCISE) - "DETAILED"
+-Print level (DETAILED, CONCISE) - "CONCISE"
+//-Print level (DETAILED, CONCISE) - "DETAILED"
 
 # for debugging
 -Print input parameters - "true"
